--- a/src/telas/cadastrarImovel.form
+++ b/src/telas/cadastrarImovel.form
@@ -37,7 +37,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="212" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="143" max="-2" attributes="0"/>
           </Group>
@@ -48,7 +48,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
               <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="30" max="32767" attributes="0"/>
+              <EmptySpace pref="39" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -391,60 +391,79 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="numeroApto" alignment="0" max="32767" attributes="0"/>
-                          <Component id="numeroAndar" alignment="0" max="32767" attributes="0"/>
-                          <Component id="quantComodos" alignment="0" max="32767" attributes="0"/>
-                          <Component id="quantPavimentos" alignment="0" max="32767" attributes="0"/>
-                          <Component id="valorCondominio" alignment="0" max="32767" attributes="0"/>
-                          <Component id="idadeImovel" alignment="0" max="32767" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="numeroApto" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="numeroAndar" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="quantComodos" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="quantPavimentos" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="valorCondominio" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="idadeImovel" alignment="0" max="32767" attributes="0"/>
+                              </Group>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="txtQuantPavimentosApto" alignment="0" pref="150" max="32767" attributes="0"/>
+                                      <Component id="txtValorCondominioApto" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="txtIdadeImovelApto" alignment="0" max="32767" attributes="0"/>
+                                  </Group>
+                                  <Component id="txtQuantComodosApto" min="-2" pref="150" max="-2" attributes="0"/>
+                                  <Component id="txtNumApto" min="-2" pref="150" max="-2" attributes="0"/>
+                                  <Component id="txtNumAndarApto" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <Group type="102" attributes="0">
+                              <Component id="jLabel12" max="32767" attributes="0"/>
+                              <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                              <Component id="vendaApto" min="-2" pref="67" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="aluguelApto" min="-2" pref="87" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="txtNumAndarApto" pref="150" max="32767" attributes="0"/>
-                          <Component id="txtNumApto" alignment="0" max="32767" attributes="0"/>
-                          <Component id="txtQuantComodosApto" alignment="0" max="32767" attributes="0"/>
-                          <Component id="txtQuantPavimentosApto" alignment="0" max="32767" attributes="0"/>
-                          <Component id="txtValorCondominioApto" alignment="0" max="32767" attributes="0"/>
-                          <Component id="txtIdadeImovelApto" alignment="0" max="32767" attributes="0"/>
-                      </Group>
-                      <EmptySpace pref="34" max="32767" attributes="0"/>
+                      <EmptySpace pref="56" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="numeroAndar" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="txtNumAndarApto" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="numeroAndar" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="numeroApto" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="txtNumApto" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="28" max="32767" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="quantComodos" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="txtQuantComodosApto" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="quantComodos" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="quantPavimentos" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="txtQuantPavimentosApto" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="valorCondominio" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="txtValorCondominioApto" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="valorCondominio" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="idadeImovel" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="txtIdadeImovelApto" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="idadeImovel" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jLabel12" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="vendaApto" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="aluguelApto" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="50" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -498,6 +517,24 @@
             </Component>
             <Component class="javax.swing.JTextField" name="txtIdadeImovelApto">
             </Component>
+            <Component class="javax.swing.JLabel" name="jLabel12">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Disponibilidade:"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JCheckBox" name="vendaApto">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="venda"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="vendaAptoActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JCheckBox" name="aluguelApto">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="aluguel"/>
+              </Properties>
+            </Component>
           </SubComponents>
         </Container>
         <Container class="javax.swing.JPanel" name="PainelCasa">
@@ -547,9 +584,9 @@
                                               </Group>
                                           </Group>
                                           <Group type="102" attributes="0">
-                                              <Component id="venda" min="-2" pref="87" max="-2" attributes="0"/>
+                                              <Component id="vendaCasa" min="-2" pref="87" max="-2" attributes="0"/>
                                               <EmptySpace max="-2" attributes="0"/>
-                                              <Component id="aluguel" min="-2" pref="87" max="-2" attributes="0"/>
+                                              <Component id="aluguelCasa" min="-2" pref="87" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
                                       <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
@@ -614,8 +651,8 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="venda" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="aluguel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="vendaCasa" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="aluguelCasa" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="26" max="32767" attributes="0"/>
                   </Group>
@@ -674,15 +711,15 @@
             </Component>
             <Component class="javax.swing.JTextField" name="txtQuantPavimentosCasa">
             </Component>
-            <Component class="javax.swing.JCheckBox" name="venda">
+            <Component class="javax.swing.JCheckBox" name="vendaCasa">
               <Properties>
                 <Property name="text" type="java.lang.String" value="venda"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="vendaActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="vendaCasaActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JCheckBox" name="aluguel">
+            <Component class="javax.swing.JCheckBox" name="aluguelCasa">
               <Properties>
                 <Property name="text" type="java.lang.String" value="aluguel"/>
               </Properties>
